--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,9 @@
     
     <!-- Font-Awesome CSS -->
     <script src="https://use.fontawesome.com/36845998fa.js"></script>
-    <!-- Custom styles for this template -->
+    <!-- Custom styles for this template 
     <link href="css/heroic-features.css" rel="stylesheet">
-    <link href="css/round-about.css" rel="stylesheet">
+    <link href="css/round-about.css" rel="stylesheet">-->
     <link rel="stylesheet" href="css/style.css">
     <!-- SparkPopups JS -->
     <script type="text/javascript" src="js/SparkPopups.js"></script>
