--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,9 @@
     <!-- Custom styles for this template 
     <link href="css/heroic-features.css" rel="stylesheet">
     <link href="css/round-about.css" rel="stylesheet">-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <!-- SparkPopups JS -->
-    <script type="text/javascript" src="js/SparkPopups.js"></script>
+    <script type="text/javascript" src="assets/js/SparkPopups.js"></script>
 
   </head>
 
