--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
 
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="img/med-img-1.png" alt="">
+            <img class="card-img-top" src="assets/img/med-img-1.png" alt="">
             <div class="card-body">
               <h4 class="card-title">Pediatric Health Plans</h4>
               <p class="card-text">Preventive health care consults and health plan developments; our collaborative pediatric specialists provide live expertise in children’s health.</p>
@@ -92,7 +92,7 @@
 
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="img/med-img-2.jpg" alt="">
+            <img class="card-img-top" src="assets/img/med-img-2.jpg" alt="">
             <div class="card-body">
               <h4 class="card-title">Urgent Care</h4>
               <p class="card-text">Chat with our delightful scheduling BOT and choose a convenient location and arrival time that's best for you and wait in the comfort of your own home.</p>
@@ -106,7 +106,7 @@
         </div>
 
         <div class="col-lg-3 col-md-6 text-center mb-4">
-            <img class="rounded-circle img-fluid d-block mx-auto" src="img/member2-200px.jpg" alt="">
+            <img class="rounded-circle img-fluid d-block mx-auto" src="assets/img/member2-200px.jpg" alt="">
             <div class="card-body">
               <h4 class="card-title">KwikRx</h4>
               <p class="card-text">Medical consultation and prescription writing service is currenlty online. Get a consult from the comfort of your home!</p>
@@ -118,7 +118,7 @@
           </div>
 
         <div class="col-lg-3 col-md-6 text-center mb-4">
-            <img class="rounded-circle img-fluid d-block mx-auto" src="img/member3-200px.jpg" alt="">
+            <img class="rounded-circle img-fluid d-block mx-auto" src="assets/img/member3-200px.jpg" alt="">
             <div class="card-body">
               <h4 class="card-title">Resident Relations</h4>
               <p class="card-text">Discuss concerns with or provide direct feedback to our Resident Program Officer</p>
