--- a/public/index.html.old.html
+++ b/public/index.html.old.html
@@ -15,16 +15,17 @@
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <!-- Bootstrap core CSS -->
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    
     <!-- Font-Awesome CSS -->
     <script src="https://use.fontawesome.com/36845998fa.js"></script>
     <!-- Custom styles for this template -->
-    <link href="css/heroic-features.css" rel="stylesheet">
-    <link href="css/round-about.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link href="assets/css/heroic-features.css" rel="stylesheet">
+    <link href="assets/css/round-about.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
     <!-- SparkPopups JS -->
-    <script type="text/javascript" src="js/SparkPopups.js"></script>
+    <script type="text/javascript" src="assets/js/SparkPopups.js"></script>
 
   </head>
 
@@ -76,7 +77,7 @@
 
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="img/med-img-1.png" alt="">
+            <img class="card-img-top" src="assets/img/med-img-1.png" alt="">
             <div class="card-body">
               <h4 class="card-title">Pediatric Health Plans</h4>
               <p class="card-text">Preventive health care consults and health plan developments; our collaborative pediatric specialists provide live expertise in children’s health.</p>
@@ -91,7 +92,7 @@
 
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="img/med-img-2.jpg" alt="">
+            <img class="card-img-top" src="assets/img/med-img-2.jpg" alt="">
             <div class="card-body">
               <h4 class="card-title">Urgent Care</h4>
               <p class="card-text">Chat with our delightful scheduling BOT and choose a convenient location and arrival time that's best for you and wait in the comfort of your own home.</p>
@@ -105,7 +106,7 @@
         </div>
 
         <div class="col-lg-3 col-md-6 text-center mb-4">
-            <img class="rounded-circle img-fluid d-block mx-auto" src="img/member2-200px.jpg" alt="">
+            <img class="rounded-circle img-fluid d-block mx-auto" src="assets/img/member2-200px.jpg" alt="">
             <div class="card-body">
               <h4 class="card-title">KwikRx</h4>
               <p class="card-text">Medical consultation and prescription writing service is currenlty online. Get a consult from the comfort of your home!</p>
@@ -117,7 +118,7 @@
           </div>
 
         <div class="col-lg-3 col-md-6 text-center mb-4">
-            <img class="rounded-circle img-fluid d-block mx-auto" src="img/member3-200px.jpg" alt="">
+            <img class="rounded-circle img-fluid d-block mx-auto" src="assets/img/member3-200px.jpg" alt="">
             <div class="card-body">
               <h4 class="card-title">Resident Relations</h4>
               <p class="card-text">Discuss concerns with or provide direct feedback to our Resident Program Officer</p>
@@ -194,7 +195,6 @@ $( "#SparkURIDial" ).on( "click", function(event){
     });
 
 $(document).ready(function() {
-    console.log("From within the HTML:" SPARK_TOKEN);
 });
 
 
