--- a/public/index.html
+++ b/public/index.html
@@ -15,16 +15,16 @@
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <!-- Bootstrap core CSS -->
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font-Awesome CSS -->
     <script src="https://use.fontawesome.com/36845998fa.js"></script>
     <!-- Custom styles for this template -->
-    <link href="css/heroic-features.css" rel="stylesheet">
-    <link href="css/round-about.css" rel="stylesheet">
+    <link href="assets/css/heroic-features.css" rel="stylesheet">
+    <link href="assets/css/round-about.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <!-- SparkPopups JS -->
-    <script type="text/javascript" src="js/SparkPopups.js"></script>
+    <script type="text/javascript" src="assets/js/SparkPopups.js"></script>
 
   </head>
 
