added images and mod layout

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/heroic-features.css" rel="stylesheet">
     <link href="assets/css/round-about.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <!-- SparkPopups JS -->
     <script type="text/javascript" src="assets/js/SparkPopups.js"></script>
 
@@ -76,7 +76,7 @@
 
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="img/med-img-1.png" alt="">
+            <img class="card-img-top" src="assets/img/med-img-1.png" alt="">
             <div class="card-body">
               <h4 class="card-title">Pediatric Health Plans</h4>
               <p class="card-text">Preventive health care consults and health plan developments; our collaborative pediatric specialists provide live expertise in children’s health.</p>
@@ -91,7 +91,7 @@
 
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <img class="card-img-top" src="img/med-img-2.jpg" alt="">
+            <img class="card-img-top" src="assets/img/med-img-2.jpg" alt="">
             <div class="card-body">
               <h4 class="card-title">Urgent Care</h4>
               <p class="card-text">Chat with our delightful scheduling BOT and choose a convenient location and arrival time that's best for you and wait in the comfort of your own home.</p>
@@ -105,30 +105,41 @@
         </div>
 
         <div class="col-lg-3 col-md-6 text-center mb-4">
-            <img class="rounded-circle img-fluid d-block mx-auto" src="img/member2-200px.jpg" alt="">
+            <div class="card">
+            <!--img class="rounded-circle img-fluid d-block mx-auto" src="assets/img/member2-200px.jpg" alt=""-->
+                <img class="card-img-top" src="assets/img/med-img-3.jpeg" alt="">
             <div class="card-body">
               <h4 class="card-title">KwikRx</h4>
-              <p class="card-text">Medical consultation and prescription writing service is currenlty online. Get a consult from the comfort of your home!</p>
+              <p class="card-text">Prescription writing services are currenlty online. Get a consult from the comfort of your home!</p>
               <!-- a class="btn btn-success" href="#"><i class="fa fa-phone-square"></i> Call</a-->
+            </div>
+            <div class="card-footer">
               <button id="SparkVideoCall" class="btn btn-primary">
                 <i class="fa fa-phone-square"></i> Call Now
               </button>
             </div>
           </div>
+        </div>
 
         <div class="col-lg-3 col-md-6 text-center mb-4">
-            <img class="rounded-circle img-fluid d-block mx-auto" src="img/member3-200px.jpg" alt="">
+            <div class="card">
+                <!--img class="rounded-circle img-fluid d-block mx-auto" src="assets/img/member3-200px.jpg" alt=""-->
+                <img class="card-img-top" src="assets/img/med-img-4.jpg" alt="">                 
             <div class="card-body">
               <h4 class="card-title">Resident Relations</h4>
               <p class="card-text">Discuss concerns with or provide direct feedback to our Resident Program Officer</p>
+            </div>
+            <div class="card-footer">
               <!--a class="btn btn-primary" href="#"><i class="fa fa-comments"></i> Message</a-->
               <button id="SparkMessage" class="btn btn-primary">
                 <i class="fa fa-comments"></i> Chat
               </button>
             </div>
-          </div>
-
+        </div>
+        </div>
       </div>
+
+  </div>
       <!-- /.row -->
     </div>
     <!-- /.container -->
@@ -194,7 +205,7 @@ $( "#SparkURIDial" ).on( "click", function(event){
     });
 
 $(document).ready(function() {
-    console.log("From within the HTML:" SPARK_TOKEN);
+    console.log("From within the HTML:" + SPARK_TOKEN);
 });
 
 
