remove unused fn

--- a/public/index.html
+++ b/public/index.html
@@ -224,7 +224,8 @@ $( "#add-token" ).on( "click", function(event) {
 $(document).ready(function() {
     var theToken = '';
     console.log("Everything is loaded");
-    $("#token-form").dialog("open");
+    //$("#token-form").dialog("open");
+    askforToken();
     
 
 });
