load SDK before widget

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <meta name="description" content="Spark Demo">
     <meta name="author" content="Harish Chawla">
     <title>Cisco Spark-SDK Healthcare Demo</title>
-    <!-- insert Cisco Spark Widget -->
-    <script src="https://code.s4d.io/widget-space/production/bundle.js"></script>
+    <!-- Spark JS SDK -->
+    <script src="assets/js/bundle.js"></script>
+
     <link rel="stylesheet" href="https://code.s4d.io/widget-space/production/main.css">
     <!-- jQuery & jqueryui core -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -23,9 +24,10 @@
     <link href="assets/css/heroic-features.css" rel="stylesheet">
     <link href="assets/css/round-about.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <!-- SparkPopups JS -->
-    <script src="assets/js/bundle.js"></script>
-    <script type="text/javascript" src="assets/js/SparkPopups.js"></script>
+
+    <!-- insert Cisco Spark Widget -->
+    <script src="https://code.s4d.io/widget-space/production/bundle.js"></script>
+    
 
   </head>
 
@@ -342,6 +344,9 @@ $(document).ready(function() {
     
 });
 </script> 
+<!-- SparkPopups JS -->
+<script type="text/javascript" src="assets/js/SparkPopups.js"></script>
+
 <!--      
 <button type="button" data-toggle="modal" data-target="#sparkwidgetmodal">Toggle Spark modal</button>
 -->
